@@ -140,15 +140,6 @@ ok !!$t->app->plugins->emit_hook('does_not_exist'), 'hook has been emitted';
 ok !!$t->app->plugins->emit_hook_reverse('does_not_exist'),
   'hook has been emitted';
 
-# Replaced helper
-my $log = '';
-my $cb = $t->app->log->on(message => sub { $log .= pop });
-$t->app->helper(replaced_helper => sub { });
-$t->app->helper(replaced_helper => sub { });
-like $log, qr/Helper "replaced_helper" already exists, replacing/,
-  'right message';
-$t->app->log->unsubscribe(message => $cb);
-
 # Custom hooks
 my $custom;
 $t->app->hook('custom_hook' => sub { $custom += shift });
@@ -169,8 +160,8 @@ $t->get_ok('/plugin-test-some_plugin2/register')->status_isnt(500)
   ->content_unlike(qr/Something/)->content_like(qr/Page not found/);
 
 # Plugin::Test::SomePlugin2::register (security violation again)
-$log = '';
-$cb = $t->app->log->on(message => sub { $log .= pop });
+my $log = '';
+my $cb = $t->app->log->on(message => sub { $log .= pop });
 $t->get_ok('/plugin-test-some_plugin2/register')->status_isnt(500)
   ->status_is(404)->header_is(Server => 'Mojolicious (Perl)')
   ->content_unlike(qr/Something/)->content_like(qr/Page not found/);
