@@ -1,6 +1,8 @@
 
 6.33  2015-11-19
   - Updated IO::Socket::IP requirement to 0.37 for certain bug fixes.
+  - Improved helper method in Mojolicious to replace already existing helpers
+    silently.
 
 6.32  2015-11-18
   - Deprecated Mojolicious::Routes::Pattern::format_regex.
